--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /src/Server/packages
 /src/Server/GreenOne.NuGet.Server.Web/bin
 /src/Server/GreenOne.NuGet.Server.Web/obj
+
+
+/src/Library/.vs
+/src/Library/GreenOne.NuGet.Server.Library/bin
+/src/Library/GreenOne.NuGet.Server.Library/obj
