--- a/src/Client/GreenOne.NuGet.Server.Client/GreenOne.NuGet.Server.Client.csproj
+++ b/src/Client/GreenOne.NuGet.Server.Client/GreenOne.NuGet.Server.Client.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GreenOne.NuGet.Server.Library, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\GreenOne.1.0.0\lib\GreenOne.NuGet.Server.Library.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
