--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-/src/Server/.vs
+*.suo
+
+/src/Server/GreenOne.NuGet.Server.Web/bin/.vs
 /src/Server/packages
 /src/Server/GreenOne.NuGet.Server.Web/bin
 /src/Server/GreenOne.NuGet.Server.Web/obj
 
 
-/src/Library/.vs
+/src/Library/GreenOne.NuGet.Server.Library/.vs
 /src/Library/GreenOne.NuGet.Server.Library/bin
 /src/Library/GreenOne.NuGet.Server.Library/obj
 
 
-/src/Client/.vs
+src/Client/GreenOne.NuGet.Server.Client/.vs
 /src/Client/GreenOne.NuGet.Server.Client/bin
 /src/Client/GreenOne.NuGet.Server.Client/obj
 /src/Client/GreenOne.NuGet.Server.Client/packages
